--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="" class="header__lang-link header__lang-link_active"> Ru</a>
         <a href="" class="header__lang-link">En</a>
     </header>
-    <main>
+    <main class="main">
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
