--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в
                 свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li class="intro__list-item"><span class="fat-text">Часовых поясов </span>11</li>
-                <li class="intro__list-item"><span class="fat-text">Объектов природного наследия ЮНЕСКО</span> 12</li>
-                <li class="intro__list-item"><span class="fat-text">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-                <li class="intro__list-item"><span class="fat-text">Природных заповедников</span> 105</li>
-                <li class="intro__list-item"><span class="fat-text">Аэропортов</span> 241</li>
+                <li class="intro__list-item"><span class="intro__fat-text">Часовых поясов </span>11</li>
+                <li class="intro__list-item"><span class="intro__fat-text">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                <li class="intro__list-item"><span class="intro__fat-text">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                <li class="intro__list-item"><span class="intro__fat-text">Природных заповедников</span> 105</li>
+                <li class="intro__list-item"><span class="intro__fat-text">Аэропортов</span> 241</li>
             </ul>
         </section>
         <section class="grid">
